# uuidv7

./: .gitignore  .tool-versions  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.UUIDv7.exs  mix.exs
.github/: dependabot.yml
.github/workflows/: elixir.yml  release.yml
lib/: uui_dv7.ex  uuidv7.ex
lib/uuidv7/: type.ex
native/uuidv7/: Cargo.toml  Cross.toml  README.md
native/uuidv7/.cargo/: config.toml
native/uuidv7/src/: lib.rs
scripts/: bench.exs
test/: uui_dv7_test.exs  uuidv7_test.exs
