[package]
name = "uuidv7"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "uuidv7"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.29", default-features = false, features = [
  "derive",
  "nif_version_2_15",
] }
uuid = { version = "1.3.4", features = ["v7"] }
